# llm-from-scratch

./: .gitignore  pyproject.toml
artifacts/sft/: train.jsonl
artifacts/tokenizer/: bpe_tokenizer.json
configs/: base.yaml  sft.yaml
scripts/: inspect_dataset.py  inspect_tokenizer.py  prepare_sft_data.py  test_model.py  train_base.py  train_sft.py  train_tokenizer.py
src/edge_cloud_llm/: config.py  utils.py
src/edge_cloud_llm/data/: __init__.py  dataset.py  sft_dataset.py  tokenizer.py
src/edge_cloud_llm/model/: __init__.py  attention.py  block.py  embeddings.py  feedforward.py  lora.py  model_gpt.py  moe.py  transformer.py
src/edge_cloud_llm/training/: __init__.py  sft_trainer.py  trainer.py
