[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-cloud-llm"
version = "0.1.0"
description = "Edge to cloud LLM project"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]